--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.2",
+    "react-intersection-observer": "^9.13.1",
     "react-responsive": "^10.0.0",
     "three": "^0.167.1",
     "three-stdlib": "^2.32.2"
