--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-three/fiber": "^8.17.6",
     "@types/three": "^0.168.0",
     "framer-motion": "^11.11.9",
-    "gsap": "^3.12.5",
+    "gsap": "^3.13.0",
+    "gsap-trial": "^3.12.7",
+    "lenis": "^1.3.8",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
+    "matter-js": "^0.20.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
