--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.1",
+    "@react-pdf/renderer": "^4.3.0",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.6",
     "@types/three": "^0.168.0",
@@ -27,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.2",
     "react-intersection-observer": "^9.13.1",
+    "react-pdf": "^10.0.1",
     "react-responsive": "^10.0.0",
     "three": "^0.167.1",
     "three-stdlib": "^2.32.2"
